# plant-model-gen

./: .gitignore  .msg-f1.txt  7997_model_analysis.md  AGENTS.md  AIOS_CORE_QUERY_SUMMARY.md  BOOLEAN_OPERATION_ANALYSIS.md  BOOLEAN_OPERATION_ANALYSIS_SUMMARY.md  BOOLEAN_OPERATION_DEBUG_REPORT.md  BOOLED_AABB_INVESTIGATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CSG_EXTRUSION_REVOLUTION_IMPROVEMENT.md  CSG_EXTRUSION_REVOLUTION_STATUS.md  CSG_IMPLEMENTATION_SUMMARY.md  CSG_extrusion_failure_analysis.md  CTORUS_MESH_ANALYSIS.md  Cargo.toml  Cargo.toml.original  ColorSchemes.toml  DB_Attribute_IDA_Struct_Definition.idc  DB_Attribute_Structure_Definition.h  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_README.md  DEVELOPMENT_PLAN.md  DOCS_ORGANIZATION.md  DbOption-1112.toml  DbOption-7997-sync.toml  DbOption-8021.toml  DbOption-KMX.toml  DbOption-aba.toml  DbOption-ams.toml  DbOption-backup.toml  DbOption-cache.toml  DbOption-db.toml  DbOption-room-calc.toml  DbOption-room-dbnos.toml  DbOption-room-gen-7999.toml  DbOption-room-pane17496-cache-win.toml  DbOption-room-pane17496-cache.toml  (+165 more)
.cargo/: config.toml
.claude/: mcp-config.md
.devops/: IMPLEMENTATION_REPORT.txt
.factory/: init.sh  services.yaml
.memory/: 2026-04-16.md  2026-04-17.md
.serena/: project.yml
archetypes/: 1.glb  17496_106028_716.glb  2.glb  2369808856060271537.glb  2464350913392010489.glb  4241077608439927068.glb  4802710973701507045.glb  4852596463742796485.glb
cmd/: connect_surreal_8009.sh  run_surreal_8009.sh  run_surreal_8010.sh  run_surreal_8020.sh  run_surreal_pair.sh  stop_surreal_pair.sh
db-data/: run_surrealkv_versioned.ps1  test_version_data.surql
db_options/: DbOption-1112-bench-c12.toml  DbOption-1112-bench-c6.toml  DbOption-1112-bench-c8.toml  DbOption-1112.toml  DbOption-7997-bran-perf-100.toml  DbOption-7997-bran-perf-50.toml  DbOption-7997-bran-perf.toml  DbOption-7997-full-cache.toml  DbOption-7997-full.toml  DbOption-7997-pane-perf.toml  DbOption-8021.toml  DbOption-aba.toml  DbOption-ams.toml  DbOption-aveva-1600-parse.toml  DbOption-aveva-1600.toml  DbOption-cache.toml  DbOption-db.toml  DbOption-local.toml  DbOption-mac.toml  DbOption-prefetch-cacheonly.toml  DbOption-room-calc.toml  DbOption-room-dbnos.toml  DbOption-room-gen.toml  DbOption-room-panels.toml  DbOption-run.toml  DbOption-shadow.toml  DbOption-tmpcache.toml  DbOption-zsy.toml  DbOption.refno_assoc_test.toml  DbOption.toml
deploy/: nginx_duckdb.conf
design/: model-gen-task.pen  pipeline_ui.pen  站点管理交互设计.pen
doc/: archetypes_analysis.md  progress.md
docs/: AIOS_CORE_QUERY_GUIDE.md  BOOLEAN_OPERATION_FLOWCHART.md  DEBUG_24381_145018_ANALYSIS.md  DEBUG_24381_145019_PARQUET.md  DEBUG_24381_35795_PANEL_ANALYSIS.md  DEBUG_24381_35960_NO_GEOMETRY_ANALYSIS.md  DbOption_LOD_FIX.toml  E3D_UPLOAD_API.md  EXPORT_FLOW_DETAILED.md  EXPORT_FLOW_DIAGRAM.md  EXPORT_SINGLE_MODEL_FLOW.md  GITHUB_ARTIFACT_DEPLOYMENT.md  IDA_PRO_SNOUT_ANALYSIS.md  LOD_COMPLETE_FIX_GUIDE.md  LOD_FIX_SUMMARY.md  LOD_FIX_VERIFICATION.md  LOD_L1_L2_SAME_SIZE_ANALYSIS.md  MINIO_INCREMENT_SYNC_PLAN.md  MODEL_ERROR_CODES.md  MODEL_GENERATION_FLOW.md  MODEL_GENERATION_FLOW_ANALYSIS.md  MODEL_GENERATION_FLOW_ANALYSIS_COMPLETE.md  PARQUET_EXPORT_FLOW_7997.md  PARQUET_EXPORT_FLOW_ANALYSIS.md  PERF_7997_ANALYSIS.md  PERF_GEN_MODEL_GUIDE.md  PREPACK_FORMAT_SPECIFICATION.md  PROGRESS_HUB_IMPLEMENTATION.md  PROJECT_FILE_ORGANIZATION_PLAN.md  REMOTE_COLLABORATION_CONFIG_GUIDE.md  REMOTE_COLLABORATION_DEV_PLAN.md  REMOTE_FILE_SERVER_SYNC_TEST.md  REMOTE_SYNC_HTTP_ACCESS_PLAN.md  REMOTE_SYNC_IMPLEMENTATION_GUIDE.md  ROOM_V2_VERIFICATION.md  SURREAL_QUERY_NXTR_35961.md  VERIFICATION_RESULT_24381_145018.md  VERIFICATION_SUMMARY.md  VERIFICATION_SUMMARY_FINAL.md  VERIFY_SYNC_TO_DB_GUIDE.md  (+22 more)
examples/: analyze_mesh_geometry.rs  analyze_valv_expressions.rs  audit_basic_primitives.rs  capture_model_baseline.rs  check_glb_manifold.rs  check_glb_mesh.rs  check_glb_topology.rs  check_glb_topology_weld.rs  check_mesh_normals.rs  check_tubi_connectivity.rs  check_tubi_for_bran.rs  compare_refno_world_transforms.rs  debug_bend_24381_46958.rs  debug_export_103388.rs  debug_manifold_conversion.rs  debug_trim_lowcase_query.rs  diagnose_cache_null.rs  diagnose_fixing_boolean.rs  dump_cache_refno_bool_inputs.rs  dump_cata_para10_expr.rs  dump_transform_cache_refno.rs  export_single_mesh.rs  find_elbo.rs  inspect_bran_children_cache.rs  inspect_bran_children_ptset.rs  inspect_bran_tubi_topology.rs  inspect_cache_geo_hash.rs  inspect_cache_geom_refno.rs  inspect_cache_ptset.rs  inspect_cache_refno.rs  inspect_cache_tubi_refno.rs  inspect_inst_geo_hash.rs  inspect_inst_ptset.rs  inspect_refno_catr_arri_leav.rs  inspect_surreal_pe_and_noun_attr.rs  query_component_insts.rs  query_noun_att_fields.rs  refresh_pe_transform.rs  room_calc_by_panel_demo.rs  room_calculation_demo.rs  (+31 more)
issues/: P0-修复全局路由器.md  ParsePdmsData任务修复.md  PrimLoft法向修复总结.md  README-任务管理分析.md  任务管理-前后端交互流程.md  任务管理功能-分析总结.md  任务管理功能-快速参考指南.md  任务管理功能-详细开发计划.md  任务管理功能实现分析报告.md  内存KV数据库备份功能实现总结.md  开发文档-WebUI部署与使用.md  扫描目录功能-修复报告.md  测试1112单SITE模型生成.md  移动连接错误提示到连接区域.md  自动启动解析任务.md  部署管理平台使用流程与功能模块.md
llmdoc/: index.md
proto/: progress_service.proto  spatial_query_service.proto
resource/: ssc_level.xlsx  ssc_room.xlsx  专业分类.xlsx  元数据_测试.xlsx  电气专业大宗材料属性对应关系表.xls  石楼油库位号信息表.xlsx  管道外径壁厚表.xlsx
scripts/: README.md  apply_lod_fix.sh  auto_install_lsky.py  benchmark_indextree.sh  check_actual_data.ps1  check_lsky_logs.py  check_pipe_topology_from_obj.py  check_refno_21491_19209.js  compare_bran_7997_fair.ps1  compare_cacheonly_vs_now.ps1  compare_screenshots.py  deploy_lsky_apt.py  deploy_lsky_mirror.py  deploy_lsky_pro.sh  deploy_lsky_remote.py  deploy_to_ubuntu.sh  diagnose_17496_boolean.surql  docker_run_lsky.py  export_dbnum_parquet_file.sh  extract_function.py  fix_lsky_config.py  init_lsky_config.py  json_sig.ps1  log_stats.ps1  lsky-pro-docker-compose.yml  lsky_login_get_token.py  obj_sig.ps1  perf_gen_model_7999.sh  perf_test_7997_bran.ps1  perf_test_7997_pane.ps1  playwright_simple.py  (+41 more)
(+1637 files in other folders)
