[package]
name = "aios-database"
version = "0.3.2"
edition = "2024"
default-run = "aios-database"

[lib]
name = "aios_database"
path = "src/lib.rs"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"
required-features = ["web_server"]

[[bin]]
name = "aios-database"
path = "src/main.rs"
# `cargo test` 默认会为 bin 也构建 `--test` harness；该工程 bin 依赖重且在 Windows 下易引发链接/内存异常。
test = false



[dependencies]
config = "0.15.18"
anyhow = "1.0.57"
serde_json = "1.0.81"
hex = "0.4.3"
once_cell = "1.12.0"
futures = "^0.3"
smol_str = "0.3.2"
itertools = "0.14.0"
lazy_static = "1.4.0"
#flate2 = "1.0.23"
log = "0.4.17"
env_logger = "0.11"
parquet = { version = "57.1.0", optional = true }
arrow-array = { version = "57.1.0", optional = true }
arrow-schema = { version = "57.1.0", optional = true }
polars = { version = "0.46", default-features = false, optional = true, features = [
    "lazy",
    "parquet",
    "dtype-struct",
    "is_in",
] }

# MQTT 服务器和客户端
rumqttc = "0.25.0"
# rumqttd = "0.19" # 暂时注释掉，rumqttd 需要单独的项目

# 实时通信（axum-extra 需要和 axum 版本匹配）
# axum-extra = { version = "0.9", features = ["typed-header", "sse"] }
futures-util = "0.3"
regex = "1.12.1"
nom = "8"
calamine = "0.31.0"
#sled = "0.34.7"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
bitflags = "2.9.4"
# bitvec 已移除（仅 plug_in 死代码使用）
chrono = "0.4.22"
nalgebra = { version = "0.34.1", features = ["serde", "convert-glam030"] }
parry3d = { version = "0.25.0", features = ["serde-serialize"] }
parry2d = { version = "0.25.0", features = ["serde-serialize"] }
parse_pdms_db = { git = "https://github.com/happyrust/pdms-io.git", branch = "dev-3.1" }
aios_core = { git = "https://github.com/happyrust/rs-core.git", branch = "dev-3.1" }
surrealdb = { git = "https://gitee.com/happydpc/surrealdb", branch = "dev-3.1", default-features = false, features = [
    "protocol-ws",
    "kv-mem",
] }
# surrealdb-types 需要显式引入：SurrealValue derive 宏默认使用 ::surrealdb_types 路径
surrealdb-types = { git = "https://gitee.com/happydpc/surrealdb", branch = "dev-3.1" }
pdms_io = { git = "https://github.com/happyrust/pdms-io.git", branch = "dev-3.1" }
# gen-xkt = { path = "../gen-xkt" }
rvm-rs = { git = "https://github.com/happyrust/rvm-rs", optional = true }

# 通用依赖
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
num_cpus = "1.16"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }

clap = { version = "4.3.5", features = ["derive"] }
dashmap = { version = "=7.0.0-rc2", features = ["serde", "rayon"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
sha2 = "0.10"
id_tree = { version = "1.8.0", features = ["serde_support"] }
indextree = { git = "https://github.com/happyrust/indextree", branch = "main", features = [
    "rkyv",
] }
glam = { version = "0.30.8", features = ["serde", "rkyv"] }
glamx = { version = "0.1.3", features = ["approx", "rand"], optional = true }
rkyv = { version = "0.8.12", features = ["hashbrown-0_15"] }
rfd = { version = "0.15.4", features = ["async-std"], optional = true }

# redb = "3.0.1" # Removed - using SQLite for all storage

# image/imageproc/rusttype 已移除（无使用）
gltf = "1.4"
tiny-skia = { version = "0.11", features = ["png-format"] }

# 空间索引相关依赖
rstar = { version = "0.12", optional = true }

# 凸分解（可选，默认不启用）
miniacd = { git = "https://github.com/happyrust/miniacd-fork.git", branch = "main", optional = true }

#造型功能，先在database测试
serde_with = { version = "3.14.1", features = ["macros"] }
bincode = "1.3"
rayon = "1.10.0"
indexmap = "2.11.4"
urlencoding = "2.1.3"
notify = "8.0.0"
walkdir = "2.5.0"
num_enum = "0.7.2"
petgraph = { version = "0.8.2", features = ["serde-1"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "json"] }
tracing-chrome = { version = "0.7.1", optional = true }
strum = { version = "0.27.2", features = ["derive"] }
simplelog = "0.12.2"
flume = "0.11.0"
rust-embed = { version = "8.2.0", optional = true }
twox-hash = "1.6"

gpui = { version = "0.2.2", optional = true }
# story = { path = "../gpui-component/crates/story", optional = true }
# gpui-component = { path = "../gpui-component/crates/ui", optional = true }
toml = "0.9.5"
eframe = { version = "0.33.0", optional = true } # 使用默认的 glow (OpenGL) backend，避免 wgpu 27.x 的 naga 兼容性问题
# re_ui = { path = "../rerun/crates/viewer/re_ui", optional = true }

# GRPC 相关依赖
tonic = { version = "0.14.2", optional = true }
prost = { version = "0.14.1", optional = true }
tonic-reflection = { version = "0.14.2", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["codec", "full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "1.0"
jsonwebtoken = { version = "9.0", optional = true }
async-trait = "0.1"

# Web UI 相关依赖
axum = { version = "0.8.6", optional = true, features = ["ws", "multipart"] }
axum-extra = { version = "0.10.1", optional = true, features = [] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6.6", features = ["fs", "cors"], optional = true }
sysinfo = { version = "0.37.0", optional = true }

# SQLite driver for spatial tests and cache
rusqlite = { version = "0.33", features = ["bundled"], optional = true }

# DuckDB removed - backend no longer uses this feature

indicatif = "0.18.1"
rust_xlsxwriter = "0.91.0"

[features]
default = [
    "ws",
    "gen_model",
    "sqlite-index",
    "manifold",
    "kv-rocksdb",
    "project_hd",
    "surreal-save",
    "parquet-export",
    "sqlite-index",
]

# Parquet/Polars 数据导出（编译较重，日常开发可不启用）
parquet-export = [
    "dep:parquet",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:polars",
]
# gui = ["dep:gpui-component", "dep:gpui", "dep:story"]
console = ["ws", "gen_model", "manifold", "project_hd", "mqtt"]
# grpc = ["dep:tonic", "dep:prost", "dep:tonic-reflection", "dep:tokio-util", "dep:jsonwebtoken", "dep:rstar"]  #GRPC服务功能
truck = []
local = []
ws = []
debug_obj_export = []
debug_expr = ["aios_core/debug_expr"]
mqtt = []
viewer = []                           #是否开启视图
gen_model = ["aios_core/gen_model"]
manifold = ["aios_core/manifold"]
# debug_parse = ["pdms_io/debug_parse"]  # 暂时禁用以避免冲突
surreal-save = []
test = ["aios_core/test"]
mem-kv-save = ["aios_core/mem-kv-save"] #额外保存PE数据到内存KV数据库
kv-rocksdb = [
    "aios_core/kv-rocksdb",
    "surrealdb/kv-rocksdb",
] # 嵌入式 RocksDB 后端，默认不编译以加快构建
project_hd = []
project_hh = []
profile = ["dep:tracing-chrome"] #性能分析，包含tracing功能
web_server = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:sysinfo",
    "dep:axum-extra",
    "dep:tokio-util",
    "dep:rusqlite",
    "aios_core/web_server",
    "gen_model",
    "dep:jsonwebtoken",
    "sqlite-index",
    "dep:reqwest",
    "dep:uuid",
    "parquet-export",
] #Web UI功能

sqlite-index = ["dep:rusqlite", "dep:tokio-util"] # SQLite RTree 空间索引功能
rvm-import = ["dep:rvm-rs", "sqlite-index"]
debug_e3d = []

# 凸分解：拆分为"运行时（无 miniacd）"与"生成（依赖 miniacd）"两层，避免仅做碰撞/单测时被 pyo3 依赖拖慢/阻塞。
convex-runtime = []
convex-decomposition = ["convex-runtime", "dep:miniacd", "dep:glamx"]

[build-dependencies]
chrono = "0.4.22"
cc = { version = "1.0", features = ["parallel"] }
# tonic-build = "0.14.2"  # 移到 grpc feature 中
# prost-build = "0.14.1"  # 移到 grpc feature 中

# ─── production：面向上线的最优产物，编译慢但性能最强 ──────────────────────────
# 用法：./build_production.sh  或  cargo build --profile production
[profile.production]
inherits = "release" # 继承当前 release 的基础设置
opt-level = 3        # 最高优化级别
codegen-units = 1    # 单 CGU，最大化跨单元内联与优化
lto = "thin"         # Thin LTO：跨 crate 内联优化，比 fat 快很多但效果接近
incremental = false  # 关闭增量，确保产物一致可重复
strip = "symbols"    # 剥离符号表，减小二进制体积

[dev-dependencies]
tempfile = "3"

# ═══════════════════════════════════════════════════════════════
# 本地路径覆盖（联调时取消注释，CI/远程编译时注释掉整个 [patch] block）
# ═══════════════════════════════════════════════════════════════
[patch."https://github.com/happyrust/rs-core.git"]
aios_core = { path = "../rs-core" }

# [patch."https://github.com/happyrust/pdms-io.git"]
# pdms_io = { path = "../pdms-io-fork" }
# parse_pdms_db = { path = "../pdms-io-fork/crates/parse_pdms_db" }
